--- a/pushdockerimage/Jenkinsfile
+++ b/pushdockerimage/Jenkinsfile
@@ -13,7 +13,7 @@ pipeline {
         stage('Build Image') {
             steps {
                 //sh 'docker build -t raj80dockerid/jenkinstest ./pushdockerimage/' (this will use the tag latest)
-		sh 'docker build -t dockernatehere/regtest01:$BUILD_NUMBER ./pushdockerimage/'
+		sh 'docker build -t dockernatehere/nginx:$BUILD_NUMBER ./pushdockerimage/'
 		    
             }
         }
